--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "micro": "^6.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-geomicons": "^2.1.0",
+    "react-simple-icons": "^1.0.0-beta.5",
     "reline": "^1.0.0-beta.3"
   }
 }
