--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "node build.js",
     "postinstall": "napa danleech/simple-icons#gh-pages",
-    "start": "./node_modules/micro/bin/micro -p 3000"
+    "start": "./node_modules/micro/bin/micro -p 3000",
+    "dev": "nodemon --exec 'npm start'"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "reline": "^1.0.0-beta.3"
   },
   "devDependencies": {
-    "cheerio": "^0.22.0"
+    "cheerio": "^0.22.0",
+    "nodemon": "^1.11.0"
   }
 }
