--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node build.js",
+    "build": "node build.js && webpack -p",
     "postinstall": "napa danleech/simple-icons#gh-pages",
     "start": "./node_modules/micro/bin/micro -p 3000",
     "dev": "nodemon --exec 'npm start'"
@@ -23,7 +23,10 @@
     "reline": "^1.0.0-beta.3"
   },
   "devDependencies": {
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
     "cheerio": "^0.22.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "webpack": "^1.13.3"
   }
 }
