--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "reline": "^1.0.0-beta.3"
   },
   "devDependencies": {
+    "babel-core": "^6.18.0",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "cheerio": "^0.22.0",
