--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "microicon",
-  "version": "1.0.0",
+  "version": "1.0.0-b.0",
   "description": "",
   "main": "index.js",
   "scripts": {
