--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Icon placeholder microservice and node module",
   "main": "index.js",
   "scripts": {
-    "_build": "npm run postinstall && npm run icons && npm run webpack",
+    "_build": "npm run _postinstall && npm run icons && npm run webpack",
     "icons": "node build.js",
     "webpack": "webpack -p",
-    "postinstall": "napa danleech/simple-icons#gh-pages",
-    "start": "./node_modules/micro/bin/micro server.js -p 3000",
+    "_postinstall": "napa danleech/simple-icons#gh-pages",
+    "start": "./node_modules/micro/bin/micro -p 3000 server.js",
     "dev": "nodemon --exec 'npm start'"
   },
   "keywords": [
@@ -22,9 +22,7 @@
   "author": "Brent Jackson",
   "license": "MIT",
   "dependencies": {
-    "material-design-icons": "^3.0.1",
     "micro": "^6.1.0",
-    "napa": "^2.3.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-geomicons": "^2.1.0",
@@ -36,6 +34,8 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "cheerio": "^0.22.0",
+    "material-design-icons": "^3.0.1",
+    "napa": "^2.3.0",
     "nodemon": "^1.11.0",
     "webpack": "^2.3.3"
   },
