--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "icons": "node build.js",
     "webpack": "webpack -p",
     "_postinstall": "napa danleech/simple-icons#gh-pages",
-    "start": "./node_modules/micro/bin/micro -p 3000 server.js",
+    "_start": "./node_modules/micro/bin/micro -p 3000 server.js",
+    "start": "micro -p 3000 server.js",
     "dev": "nodemon --exec 'npm start'"
   },
   "keywords": [
@@ -22,7 +23,7 @@
   "author": "Brent Jackson",
   "license": "MIT",
   "dependencies": {
-    "micro": "^6.1.0",
+    "micro": "^7.3.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-geomicons": "^2.1.0",
