Add ignored files to now config

--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
   "now": {
     "alias": "icon.now.sh",
     "files": [
-      "bundle.js"
+      "bundle.js",
+      "landing",
+      "server.js"
     ]
   }
 }
