Adjust now config

--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "alias": "icon.now.sh",
     "files": [
       "build.js",
-      "Icon.js",
-      "dist",
+      "lib",
       "server"
     ]
   }
