adjust for new simple-icons repo
This also pins the build to a specific revision of the repository
making the process of updating more explicit and the build more
predictable.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "node build.js",
     "webpack": "webpack -p",
-    "prepublish": "napa danleech/simple-icons#gh-pages && npm run build",
+    "prepublish": "napa simple-icons/simple-icons#ee185e89d4fd936e2ce449c94fd4784106dde59a && npm run build",
     "start": "micro -p 3000 server/index.js",
     "dev": "nodemon --exec 'npm start'"
   },
