--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "babel-preset-es2015": "^6.18.0",
     "cheerio": "^0.22.0",
     "material-design-icons": "^3.0.1",
-    "napa": "^2.3.0",
+    "napa": "3.0.0",
     "nodemon": "^1.11.0",
     "webpack": "^2.3.3"
   },
