--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "node build.js",
     "webpack": "webpack -p",
-    "prepublish": "napa simple-icons/simple-icons#ee185e89d4fd936e2ce449c94fd4784106dde59a && npm run build",
+    "prepublish": "npm run build",
     "start": "micro -p 3000 server/index.js",
     "dev": "nodemon --exec 'npm start'"
   },
@@ -34,8 +34,8 @@
     "babel-preset-es2015": "^6.18.0",
     "cheerio": "^0.22.0",
     "material-design-icons": "^3.0.1",
-    "napa": "3.0.0",
     "nodemon": "^1.11.0",
+    "simple-icons": "^1.9.9",
     "webpack": "^2.3.3"
   },
   "now": {
