--- a/package.json
+++ b/package.json
@@ -22,20 +22,22 @@
   "license": "MIT",
   "dependencies": {
     "micro": "^7.3.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-geomicons": "^2.1.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-geomicons": "^3.0.0-0",
     "react-simple-icons": "^1.0.0-beta.5",
     "reline": "^1.0.0-beta.3"
   },
   "devDependencies": {
-    "babel-core": "^6.18.0",
-    "babel-loader": "^6.2.7",
-    "babel-preset-es2015": "^6.18.0",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "babel-loader": "^8.0.4",
     "cheerio": "^0.22.0",
     "material-design-icons": "^3.0.1",
     "nodemon": "^1.11.0",
     "simple-icons": "^1.9.9",
-    "webpack": "^2.3.3"
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2"
   }
 }
