--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prepare": "npm run build && npm run webpack",
-    "build": "node build.js",
+    "build": "node build.js && npm run webpack",
     "webpack": "webpack",
     "start": "micro -p 3000 server/index.js",
     "dev": "nodemon --exec 'npm start'"
