--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "node build.js",
     "webpack": "webpack -p",
     "prepublish": "npm run build",
-    "start": "micro -p 3000 server/index.js",
-    "dev": "nodemon --exec 'npm start'"
+    "start": "micro -p 3000 server/index.js"
   },
   "keywords": [
     "icons",
@@ -34,7 +33,6 @@
     "babel-preset-es2015": "^6.18.0",
     "cheerio": "^0.22.0",
     "material-design-icons": "^3.0.1",
-    "nodemon": "^1.11.0",
     "simple-icons": "^1.9.9",
     "webpack": "^2.3.3"
   },
