Remove landing page

--- a/now.json
+++ b/now.json
@@ -4,10 +4,6 @@
   "alias": "icon.now.sh",
   "builds": [
     {
-      "src": "www/index.html",
-      "use": "@now/static"
-    },
-    {
       "src": "server/index.js",
       "use": "@now/node"
     }
@@ -15,11 +11,10 @@
   "routes": [
     {
       "src": "/",
-      "dest": "/www/index.html"
-    },
-    {
-      "src": "/robots.txt",
-      "dest": "/www/robots.txt"
+      "status": 301,
+      "headers": {
+        "Location": "https://github.com/jxnblk/microicon"
+      }
     },
     {
       "src": "/(.*)",
